<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.dashboard.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/img_profile_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/user_image"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile_photo"
            app:layout_constraintStart_toEndOf="@+id/img_profile_photo"
            app:layout_constraintTop_toTopOf="@+id/img_profile_photo"
            app:layout_constraintVertical_bias="0.333"
            tools:text="Jamet kudasi" />

        <TextView
            android:id="@+id/tv_profile_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_name"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
            tools:text="Software Engineer" />

        <TextView
            android:id="@+id/tv_profile_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="@+id/img_profile_photo"
            app:layout_constraintTop_toBottomOf="@+id/img_profile_photo" />

        <LinearLayout
            android:id="@+id/profile_edit"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_status"
            android:focusable="true">

            <ImageView
                android:id="@+id/img_profile_edit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_edit_24" />

            <TextView
                android:id="@+id/tv_profile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:text="@string/edit_profile"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_promo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_edit">

            <ImageView
                android:id="@+id/img_profile_promo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_card_membership_24"/>

            <TextView
                android:id="@+id/tv_profile_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kode_promo"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/roboto" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_profile_tentang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="Tentang"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@+id/img_profile_photo"
            app:layout_constraintTop_toBottomOf="@+id/profile_promo" />

        <LinearLayout
            android:id="@+id/profile_panduan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_tentang">

            <ImageView
                android:id="@+id/img_profile_panduan"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_lightbulb_24" />

            <TextView
                android:id="@+id/tv_profile_panduan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panduan_aplikasi"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/roboto" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_sk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_panduan">

            <ImageView
                android:id="@+id/img_profile_sk"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_library_books_24" />

            <TextView
                android:id="@+id/tv_profile_sk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sk"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/roboto" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_privasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_sk">

            <ImageView
                android:id="@+id/img_profile_privasi"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_privacy_tip_24" />

            <TextView
                android:id="@+id/tv_profile_privasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kebijakan_dan_privasi"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/roboto" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_bantuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_privasi">

            <ImageView
                android:id="@+id/img_profile_bantuan"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_help_24" />

            <TextView
                android:id="@+id/tv_profile_bantuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pusat_bantuan"
                android:textSize="16sp"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/roboto" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="Log Out"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_bantuan"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <ImageView-->
<!--        android:id="@+id/img_profile_panduan"-->
<!--        android:layout_width="24dp"-->
<!--        android:layout_height="24dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:src="@drawable/ic_baseline_lightbulb_24"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tv_profile_status"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_profile_tentang" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_profile_panduan"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/kode_promo"-->
<!--        android:textSize="16sp"-->
<!--        android:layout_marginStart="12dp"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/img_profile_panduan"-->
<!--        app:layout_constraintStart_toEndOf="@+id/img_profile_panduan"-->
<!--        app:layout_constraintTop_toTopOf="@+id/img_profile_panduan" />-->


</ScrollView>