<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.okky.ezhousing.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailTanahFragment"
            app:destination="@id/detailTanahFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.okky.ezhousing.ui.dashboard.ProfileFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.okky.ezhousing.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.okky.ezhousing.ui.dashboard.editprofile.EditProfileFragment"
        android:label="edit_profile_fragment"
        tools:layout="@layout/edit_profile_fragment" >
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:popUpTo="@id/navigation_profile"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailTanahFragment"
        android:name="com.okky.ezhousing.ui.home.DetailTanahFragment"
        android:label="fragment_detail_tanah"
        tools:layout="@layout/fragment_detail_tanah" >
        <argument
            android:name="tanah"
            app:argType="string"
            android:defaultValue="default tanah" />
        <argument
            android:name="description"
            app:argType="string"
            android:defaultValue="default description" />
        <argument
            android:name="photo"
            app:argType="string"
            android:defaultValue="default photo" />
        <action
            android:id="@+id/action_detailTanahFragment_to_paymentPopupFragment"
            app:destination="@id/paymentPopupFragment" />
        <action
            android:id="@+id/action_detailTanahFragment_to_prediksiFragment"
            app:destination="@id/prediksiFragment" />
    </fragment>
    <fragment
        android:id="@+id/paymentPopupFragment"
        android:name="com.okky.ezhousing.ui.paymentpopup.PaymentPopupFragment"
        android:label="fragment_payment_popup"
        tools:layout="@layout/fragment_payment_popup" >
        <action
            android:id="@+id/action_paymentPopupFragment_to_detailTanahFragment"
            app:destination="@id/detailTanahFragment"
            app:popUpTo="@id/detailTanahFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_paymentPopupFragment_to_prediksiFragment"
            app:destination="@id/prediksiFragment" />
    </fragment>
    <fragment
        android:id="@+id/prediksiFragment"
        android:name="com.okky.ezhousing.ui.prediksi.PrediksiFragment"
        android:label="fragment_prediksi"
        tools:layout="@layout/fragment_prediksi" >
        <action
            android:id="@+id/action_prediksiFragment_to_totalPopupFragment"
            app:destination="@id/totalPopupFragment" />
    </fragment>
    <fragment
        android:id="@+id/totalPopupFragment"
        android:name="com.okky.ezhousing.ui.prediksi.TotalPopupFragment"
        android:label="fragment_total_popup"
        tools:layout="@layout/fragment_total_popup" >
        <action
            android:id="@+id/action_totalPopupFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
        <argument
            android:name="total_number"
            app:argType="string"
            android:defaultValue="Rp 300.000" />
    </fragment>
</navigation>